--- a/analyses/fastpi/index.html
+++ b/analyses/fastpi/index.html
@@ -9,7 +9,9 @@
 {% filter markdown %}
 # fastpi <small><i>π = <span id="pi-estimate">0.0 ± 1.0</span></i></small>
 
-This little demo uses two random numbers \\(r_1\\) and \\(r_2\\) and then does a comparison $$r_1^2 + r_2^2 < 1.0$$ to figure out whether the generated point is inside the first quadrant of the unit circle.
+This little demo uses two random numbers \\(r_1\\) and \\(r_2\\) and then
+does a comparison $$r_1^2 + r_2^2 < 1.0$$ to figure out whether the
+generated point is inside the first quadrant of the unit circle.
 
 __Make sure you have a _redis-server_ running.__
 {% endfilter %}
@@ -34,10 +36,11 @@ index.html: [[ include_src('fastpi/index.html') ]]
 
 {% block footerscripts %}
 <script>
-	var databench = Databench();
+    var databench = Databench();
 
-	databench.on('status', function(msg) {
-		$('#pi-estimate').text(msg['pi-estimate'].toFixed(3)+' ± '+msg['pi-uncertainty'].toFixed(3));
-	});
+    databench.on('status', function(msg) {
+        $('#pi-estimate').text(msg['pi-estimate'].toFixed(3) +
+            ' ± '+msg['pi-uncertainty'].toFixed(3));
+    });
 </script>
 {% endblock %}
