--- a/analyses/simplepi/index.html
+++ b/analyses/simplepi/index.html
@@ -1,4 +1,4 @@
-{% from 'macros.html' import include_src %}
+{% from 'macros.html' import include_md %}
 {% extends "base.html" %}
 
 
@@ -6,21 +6,9 @@
 
 
 {% block content %}
-<h1>
-    simplepi
-    <small><i>π = <span id="pi">0.0 ± 1.0</span></i></small>
-</h1>
-
-<p>This little demo uses two random numbers \(r_1\) and \(r_2\) and
-then does a comparison $$r_1^2 + r_2^2 &le; 1.0$$ to figure out whether
-the generated point is inside the first quadrant of the unit circle.</p>
+[[ include_md('simplepi/README.md') ]]
 
 <pre id="log"></pre>
-
-<br /><br /><hr />
-<h3>Source Code</h3>
-analysis.py: [[ include_src('simplepi/analysis.py', 'python') ]]
-index.html: [[ include_src('simplepi/index.html') ]]
 {% endblock %}
 
 
