move header from readme to html file

--- a/analyses/simplepi/index.html
+++ b/analyses/simplepi/index.html
@@ -6,6 +6,7 @@
 
 
 {% block content %}
+<h1>simplepi <small><i>π = <span id="pi">0.0 ± 1.0</span></i></small></h1>
 [[ include_md('simplepi/README.md') ]]
 
 <pre id="log"></pre>
