--- a/analyses/tutorial/index.html
+++ b/analyses/tutorial/index.html
@@ -6,6 +6,17 @@ Everything outside these commands is just plain HTML. -->
 {% extends "base.html" %}
 
 
+{% block head %}
+<style>
+.axis path, .axis line {
+  fill: none;
+  stroke: #000;
+  shape-rendering: crispEdges;
+}
+</style>
+{% endblock %}
+
+
 <!-- CHANGEME. This sets the content of the HTML <title> element. -->
 {% block title %}Tutorial{% endblock %}
 
@@ -27,7 +38,7 @@ the first part of the tutorial. They are layouted using the grid systems of
 <div class="row">
     <div class="col-md-3">
         <label for="sleep_duration">Duration of sleep</label>
-        <input type="range" name="sleep_duration" min="1" max="5" step="1" value="3" />
+        <input type="range" name="sleep_duration" min="1" max="5" step="1" value="1" />
     </div>
     <div class="col-md-9">
         <button class="btn btn-primary" data-signal-name="run">Run</button>
@@ -35,18 +46,21 @@ the first part of the tutorial. They are layouted using the grid systems of
 </div>
 
 <br /><br />
-<h3>Matplotlib and Basic d3.js</h3>
+<h3>Matplotlib, Basic d3.js and a d3.js Plot</h3>
 {% filter markdown %}
 This part shows the output of the _Matplotlib_ (left) and the
 _Basic d3.js_ (right) part of the tutorial. The output is generated
 when you click _Run_ above.
 {% endfilter %}
 <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-4">
         <div id="mpld3canvas"></div>
     </div>
-    <div class="col-md-6">
-        <svg id="canvas" width="300" height="300" />
+    <div class="col-md-4">
+        <svg id="canvas_basic" width="300" height="300" />
+    </div>
+    <div class="col-md-4">
+        <svg id="canvas_plot" width="300" height="300" />
     </div>
 </div>
 
@@ -60,21 +74,21 @@ analysis. Feel free to just delete the line below now or later. -->
 
 {% block footerscripts %}
 <script>
-    // Initialize Databench's frontend library.
-	var databench = Databench();
+// Initialize Databench's frontend library.
+var databench = Databench();
 
-    // CHANGEME. Customize the code below.
-    // Initialize the VizLogic for our canvas element.
-var my_viz = VizLogic('canvas');
+// CHANGEME. Customize the code below.
+// Initialize the VizBasic for our canvas element.
+var viz_basic = VizBasic('canvas_basic');
 
 // Listen for the 'update' signal from the backend. This is the only
 // Databench specific code here.
-databench.on('update', function(json) {
-    my_viz(json);
+databench.on('update_basic', function(json) {
+    viz_basic(json);
 });
 
-// Implement the drawing with d3.js.
-function VizLogic(id) {
+// Implement a basic drawing with d3.js.
+function VizBasic(id) {
     // Initialize the d3 selector for the svg element and
     // obtain height and width.
     var svg = d3.select('#'+id),
@@ -142,6 +156,134 @@ function VizLogic(id) {
 
         // Specify what to do when an element is missing in the new
         // data. Here, just remove it.
+        lines.exit()
+            .remove();
+
+    };
+}
+
+
+// ------------ now start a d3.js plot ------------
+
+// Initialize the VizPlot for our canvas element.
+var viz_plot = VizPlot('canvas_plot');
+
+// Listen for the 'update' signal from the backend. This is the only
+// Databench specific code here.
+databench.on('update_plot', function(json) {
+    viz_plot(json);
+});
+
+// Implement a basic plot with d3.js.
+//
+// This demos some fundamental principles of d3.js without using d3 layouts.
+// Layouts are extremely powerful, but confuse a first exposure to
+// d3.js. Here, no layout is used, but scales and axes are introduced. For
+// a full example with d3 layouts, please see the Histogram example from
+// Mike Bostock: http://bl.ocks.org/mbostock/3048450
+function VizPlot(id) {
+    // Initialize the d3 selector for the svg element and
+    // obtain height and width.
+    var svg = d3.select('#'+id),
+        height = parseFloat(svg.attr('height')),
+        width = parseFloat(svg.attr('width'));
+
+    // Specify margins of the plot within the svg element in pixels.
+    var margin = {'left': 40, 'right': 20, 'top': 20, 'bottom': 20}
+
+    // Setup scales. 'domain()' specifies the range of the variables is in the
+    // data and 'range()' specifies the range of the coordinate on the
+    // screen in pixels. The funcitons 'x' and 'y' are a variable
+    // transformation from input data to pixels.
+    //
+    // Note that the range for x is 20 to 280 pixels. The range for y is
+    // 280 to 20 pixels with the larger number first. This is because the
+    // number of pixels are counted from the top of the SVG, but we want our
+    // y axis to start at the bottom.
+    var x = d3.scale.linear()
+                .domain([0, 5])
+                .range([margin.left, width-margin.right]);
+    var y = d3.scale.linear()
+                .domain([0, 1.5])
+                .range([height-margin.bottom, margin.top]);
+    // Now we are just going to test the variable transformations. The
+    // output will appear in the browser JavaScript console, but also in
+    // the log window in this analysis.
+    console.log('Testing the transformations x() and y(). Output in pixels:');
+    console.log(x(0));
+    console.log(x(2));
+    console.log(x(4));
+    console.log(y(0));
+    console.log(y(0.5));
+    console.log(y(1.0));
+
+    // Elements inside of SVG are drawn in the order they are added. Below
+    // we are going to add the axes, but we want the axes to stay in front
+    // of the content of the plot. So technically, we need to add the
+    // content of the plot (the bars of the histogram) now and only then we
+    // can add the axes. We cannot add the content now, but we can add a
+    // group 'g' here for the content and later we will not draw the bars
+    // into 'svg' but into 'g'.
+    var plot_content = svg.append('g');
+
+    // The x-axis, is effectively a visual representation of the
+    // transformation defined with x(). So d3 has an 'axis()' function
+    // packaged that takes a scale and turns it into a drawable element:
+    var xAxis = d3.svg.axis()
+        .scale(x)
+        .orient("bottom");
+    // Draw the x-axis. The y-position for drawing an x-axis is always 0.
+    // So one has to apply a group element 'g' first whose coordinates are
+    // shifted such that y=0 is where we want to draw the x-axis. We can
+    // either use 'height-margin.bottom' as the position in pixels, or
+    // we can use the transformation y(0) to get the same result, but in a
+    // cleaner way.
+    svg.append('g')
+        .attr('class', 'x axis')
+        .attr('transform', 'translate(0,'+y(0)+')')
+        .call(xAxis);
+    // And the same for the y-axis:
+    var yAxis = d3.svg.axis()
+        .scale(y)
+        .orient("left");
+    svg.append('g')
+        .attr('class', 'y axis')
+        .attr('transform', 'translate('+x(0)+',0)')
+        .call(yAxis);
+
+    // Return the function that is used to update the data
+    // of what is plotted. The data 'json' has to be an array/list numbers.
+    // For example: [0.4, 0.5, 0.3, 0.2, 0.1]
+    //
+    // Please see the 'basic d3.js' example above for comments on the data
+    // flow. Here, only the new parts are commented.
+    return function(json) {
+        lines = plot_content.selectAll(".line").data(json);
+
+        // The x-coordinates are derived from the index of the data element.
+        // So for any attribute where the value is dynamically calculated
+        // with a function, the arguments d and i of the function are the
+        // element d of the data array and the index i. For the histogram,
+        // drawing the box for x=[0,1) is done with a line centered at 0.5.
+        // So in general, we take the index plus 0.5 and transform it into
+        // pixels: x(i+0.5).
+        //
+        // The width of that line in pixels is calculated by the position
+        // in pixels of at x=1 minus x=0: x(1)-x(0).
+        lines.enter()
+            .append("svg:line")
+            .attr("class", "line")
+            .attr("x1", function(d, i) { return x(i+0.5); })
+            .attr("y1", y(0.0))
+            .attr("x2", function(d, i) { return x(i+0.5); })
+            .attr("y2", function(d) { return y(d); })
+            .style("stroke", "#55aa55")
+            .style("stroke-width", function(d) { return x(1)-x(0); });
+
+        lines.transition()
+            .duration(250)
+            .attr("y2", function(d) { return y(d); });
+
         lines.exit()
             .remove();
 
