--- a/analyses/tutorial/index.html
+++ b/analyses/tutorial/index.html
@@ -231,7 +231,8 @@ function VizPlot(id) {
     // packaged that takes a scale and turns it into a drawable element:
     var xAxis = d3.svg.axis()
         .scale(x)
-        .orient("bottom");
+        .orient("bottom")
+        .ticks(5);
     // Draw the x-axis. The y-position for drawing an x-axis is always 0.
     // So one has to apply a group element 'g' first whose coordinates are
     // shifted such that y=0 is where we want to draw the x-axis. We can
