--- a/analyses/redispub/index.html
+++ b/analyses/redispub/index.html
@@ -1,6 +1,4 @@
-{% from 'macros.html' import include_src %}
-{% extends "base.html" %}
-
+{% extends "templates/analysis.html" %}
 
 {% block head %}
 <style>
@@ -8,10 +6,10 @@
     font-size:600%; color:#008;
 }
 </style>
-{% endblock %}
+{% end %}
 
 
-{% block title %}Redis Pub{% endblock %}
+{% block title %}Redis Pub{% end %}
 
 
 {% block content %}
@@ -39,7 +37,7 @@ Publishing numbers is the easy part. The interesting part happens in the `rediss
 <h3>Source Code</h3>
 analysis.py: [[ include_src('redispub/analysis.py', 'python') ]]
 index.html: [[ include_src('redispub/index.html') ]]
-{% endblock %}
+{% end %}
 
 
 {% block footerscripts %}
@@ -85,4 +83,4 @@ index.html: [[ include_src('redispub/index.html') ]]
         $("#btnSlow").addClass("btn-default");
     });
 </script>
-{% endblock %}
+{% end %}
