--- a/analyses/helloworld/index.html
+++ b/analyses/helloworld/index.html
@@ -4,13 +4,13 @@
 <body>
     <p id="output"></p>
 
-    <script src="/static/jquery/jquery-2.1.1.min.js"></script>
-    <script src="/static/databench.js"></script>
+    <script src="/_static/databench.js"></script>
     <script>
-        var databench = Databench();
-        databench.on('status', function(json) {
-            document.getElementById('output').innerHTML =
-                json.message;
+        var d = new Databench.Connection()
+        d.connect();
+
+        d.on('status', function(message) {
+            document.getElementById('output').innerHTML = message;
         });
     </script>
 </body>
