--- a/analyses/mpld3PointLabel/index.html
+++ b/analyses/mpld3PointLabel/index.html
@@ -3,7 +3,7 @@
 {% block title %}mpld3PointLabel{% end %}
 
 
-{% block content %}
+{% block analysis %}
 
 {% filter markdown %}
 # mpld3PointLabel
@@ -23,7 +23,7 @@ index.html: [[ include_src('mpld3PointLabel/index.html') ]]
 {% end %}
 
 
-{% block footerscripts %}
+{% block footer %}
 <script>
     var databench = Databench();
 </script>
