--- a/analyses/mpld3pi/index.html
+++ b/analyses/mpld3pi/index.html
@@ -3,7 +3,7 @@
 {% block title %}mpld3pi{% end %}
 
 
-{% block content %}
+{% block analysis %}
 <h1>
     mpld3pi
     <small><i>π = <span id="pi">0.0 ± 1.0</span></i></small>
@@ -16,7 +16,7 @@
 {% end %}
 
 
-{% block footerscripts %}
+{% block footer %}
 <script>
 	var databench = Databench();
 
