--- a/analyses/redispub/index.html
+++ b/analyses/redispub/index.html
@@ -12,7 +12,7 @@
 {% block title %}Redis Pub{% end %}
 
 
-{% block content %}
+{% block analysis %}
 {% filter markdown %}
 # Redis Publishing
 
@@ -40,7 +40,7 @@ index.html: [[ include_src('redispub/index.html') ]]
 {% end %}
 
 
-{% block footerscripts %}
+{% block footer %}
 <script>
     var databench = Databench();
 
