--- a/analyses/simplepi/index.html
+++ b/analyses/simplepi/index.html
@@ -14,11 +14,11 @@
 {% block footer %}
 <script>
     var d = new Databench.Connection();
-    Databench.ui.wire();
+    Databench.ui.wire(d);
     d.connect();
 
-    d.on('data', function(data) {
-        document.getElementById('pi').innerText = data['pi']['estimate'].toFixed(3)+' ± '+data['pi']['uncertainty'].toFixed(3);
+    d.on({data: 'pi'}, function(pi) {
+        document.getElementById('pi').innerHTML = pi.estimate.toFixed(3)+' ± '+pi.uncertainty.toFixed(3);
     });
 </script>
 {% end %}
